syntax = "proto3";

package blog;

option java_package = "com.proto.blog";
option java_multiple_files = true;

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message CreateBlogRequest {
  Blog blog = 1; // id shouldn't matter here
}

message CreateBlogResponse {
  Blog blog = 1; // id should correspond to the one in db
}

service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {};
}